test/parsing/ferguson/reserved-real.chpl
var real = 0;

proc f(real) {
}

class real {
  var real =0;
}

type real = string;
